fabric/testdata/out/ing_spp-perf-test-product-search-get-api-product-queries-admins-spp-perf-test-product-search-pr-351-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/api/product-queries\") \u0026\u0026 Method(\"GET\") \u0026\u0026 JWTPayloadAllKV(\"https://identity.zalando.com/realm\",
      \"users\") \u0026\u0026 JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\",
      \"kanli\", \"https://identity.zalando.com/managed-id\", \"bmooney\", \"https://identity.zalando.com/managed-id\",
      \"egalligan\", \"https://identity.zalando.com/managed-id\", \"rlagarferrei\",
      \"https://identity.zalando.com/managed-id\", \"dgordon\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\")"},"labels":{"controller-uid":"26cb89c8-ae17-11e9-b380-0a202eda0878","deployment-id":"d-2nf1yhksdppk82q2khnu2w78qd","pipeline-id":"l-9jcuet1pfx4u7ewpus6zwwqfj"},"name":"spp-perf-test-product-search-get-api-product-queries-admins-spp-perf-test-product-search-pr-351-1","namespace":"default"},"spec":{"rules":[{"host":"spp-perf-test-product-search-pr-351-1.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-perf-test-product-search-pr-351-1","service [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/api/product-queries") && Method("GET")
      && JWTPayloadAllKV("https://identity.zalando.com/realm", "users") && JWTPayloadAnyKV("https://identity.zalando.com/managed-id",
      "kanli", "https://identity.zalando.com/managed-id", "bmooney", "https://identity.zalando.com/managed-id",
      "egalligan", "https://identity.zalando.com/managed-id", "rlagarferrei", "https://identity.zalando.com/managed-id",
      "dgordon") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-08-31T14:55:35Z"
  generation: 1
  labels:
    controller-uid: 26cb89c8-ae17-11e9-b380-0a202eda0878
    deployment-id: d-2nf1yhksdppk82q2khnu2w78qd
    pipeline-id: l-9jcuet1pfx4u7ewpus6zwwqfj
  name: spp-perf-test-product-search-get-api-product-queries-admins-spp-perf-test-product-search-pr-351-1
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-perf-test-product-search
    uid: 26cb89c8-ae17-11e9-b380-0a202eda0878
  resourceVersion: "1357489310"
  uid: e36789d8-9b06-4202-9042-ad16b3ff5397
spec:
  rules:
  - host: spp-perf-test-product-search-pr-351-1.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-perf-test-product-search-pr-351-1
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
